Add AI-First system, metrics and legacy refactor
Introduce a new ai_first_system package (adapters, Gemini adapter, LLM provider interface, agents, graph, guardrails, prompts, router and run script) and a metrics subsystem (benchmark runner, data generator, metrics and synthetic datasets). Move original source into legacy_system, add many tests (ai_first, legacy, contract, integration, metrics), add root main.py, requirements and pytest config, and update documentation (README, AGENTS.md, CLAUDE.md) to describe AI-First, benchmarking and execution modes. Update .gitignore to ignore local envs and runtime outputs and remove several generated execution artifacts from the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ __pycache__/
 .mypy_cache/
 .ruff_cache/
 .cache/
+.venv/
+
+# Configuracion local sensible
+.env.local
+
+# Salidas de ejecucion (mantener carpetas vacias con .gitkeep)
+data/ejecuciones/*
+!data/ejecuciones/.gitkeep
+metrics/reports/*
+!metrics/reports/.gitkeep
+legacy_system/data/ejecuciones/*
+!legacy_system/data/ejecuciones/.gitkeep
+legacy_system/tests/ejecuciones/*
+!legacy_system/tests/ejecuciones/.gitkeep
+tests/ejecuciones/*
+!tests/ejecuciones/.gitkeep
+tests/tmp_review/
